--- a/estilo.css
+++ b/estilo.css
@@ -5,6 +5,31 @@
   font-family: "Acme", sans-serif;
   scroll-behavior: smooth;
 }
+html, body{
+  overflow-x: hidden;
+}
+
+.banner{
+  position:relative;
+  max-width: 1000px;
+  width:100%;
+  height: 120px;
+  overflow-x: hidden;
+  /* background-image: url('./img/20230808_203107.jpg'); */
+  background-position: left;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover   ;
+}
+.banner img{
+  position:relative;
+  width:110%;
+  left:0px;
+  height:150px;
+  overflow: hidden;
+  object-fit: cover;
+  animation: 5s ease infinite running banner-animation;
+}
 
 h1 {
   display:flex;
@@ -35,6 +60,8 @@ h1 {
   justify-content: center;
 }
 .menu-item img{
+  position:relative;
+  display:block;
   height:100%;
   cursor: pointer;
 }
@@ -43,15 +70,25 @@ h1 {
   width:40px;
   opacity:.55;
   position: fixed;
-  top: 130px;
-  animation: 13s ease-in 2s infinite both running pisca;
+  top:287px;
+  animation: 15s ease-in infinite both running pisca;
   z-index: 100;
 }
 .proximo{
-  right:0px;
+  right:5px;
 
 }
-
+@keyframes banner-animation{
+  0%{
+    left: 0px;
+  }
+  50%{
+    left: -10px;
+  }
+  100%{
+    left: 0;
+  }
+}
 @keyframes pisca {
   0%{
     opacity: 0;
