--- a/estilo.css
+++ b/estilo.css
@@ -1,8 +1,8 @@
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
   font-family: "Acme", sans-serif;
+  margin: 0;
+  padding: 0;
   scroll-behavior: smooth;
 }
 html, body{
@@ -10,46 +10,46 @@ html, body{
 }
 
 .banner{
-  position:relative;
-  max-width: 1000px;
-  width:100%;
-  height: 120px;
-  overflow-x: hidden;
-  /* background-image: url('./img/20230808_203107.jpg'); */
+  background-size: cover;
   background-position: left;
   background-repeat: no-repeat;
-  background-size: cover;
+  height: 120px;
+  max-width: 1000px;
   object-fit: cover   ;
+  overflow-x: hidden;
+  position:relative;
+  width:100%;
 }
 .banner img{
-  position:relative;
-  width:110%;
-  left:0px;
+  animation: 5s ease-in-out infinite running banner-animation;
   height:150px;
+  left:0px;
   overflow: hidden;
   object-fit: cover;
-  animation: 5s ease infinite running banner-animation;
+  position:relative;
+  width:110%;
 }
 
 h1 {
-  display:flex;
-  position:sticky;
-  top:0;
-  font-size: 2.8rem;
   align-items: center;
-  justify-content: center;
-  height:80px;
   background-color: rgb(245, 188, 239);
-  vertical-align: center;
   color:blueviolet;
+  display:flex;
+  font-size: 2.8rem;
+  height:80px;
+  justify-content: center;
+  position:sticky;
+  vertical-align: center;
+  top:0;
 }
 .menu{
-  position:sticky;
-  top: 81px;
+  flex-wrap: nowrap;
   display:flex;
   flex-direction: row;
   overflow-x: scroll;
-  flex-wrap: nowrap;
+  position:sticky;
+  position: -webkit-sticky; 
+  top:0;
 }
 .menu-item{
   background-size: cover;
@@ -69,7 +69,7 @@ h1 {
 .anterior, .proximo {
   width:40px;
   opacity:.55;
-  position: fixed;
+  position: absolute;
   top:287px;
   animation: 15s ease-in infinite both running pisca;
   z-index: 100;
@@ -116,4 +116,40 @@ h1 {
 }
 .menu-item img{
   width: 140px;
+}
+
+.div-container {
+  width:100%;
+  margin: 2rem 0;
+  max-width: 1000px;
+  height:100%;
+  min-height: 400px;
+  border: 1px solid gray;
+  border-radius: 4px;
+  box-shadow: 3px 3px 5px rgba(141, 33, 33, 0.272);
+  /* background-color: aqua; */
+}
+.container-title{
+  padding: 5px 25px;
+  background-color: rgb(245, 188, 239);
+  color:blueviolet;
+  font-size: 1.6rem;
+}
+.container-img{
+  width: 50%;
+  height: 150px;
+  cursor: pointer;
+  object-fit: cover;
+  transition: all 300ms ease-in-out;
+}
+.container-img:hover{
+  transform: scale(1.08);
+  box-shadow: 2px 2px 15px silver;
+}
+.btn-voltar{
+  cursor: pointer;
+  display: block;
+  position: relative;
+  text-align: center;
+  padding:10px 15px;
 }
