--- a/estilo.css
+++ b/estilo.css
@@ -5,151 +5,192 @@
   padding: 0;
   scroll-behavior: smooth;
 }
-html, body{
+html,
+body {
   overflow-x: hidden;
 }
 
-.banner{
+.banner {
   background-size: cover;
   background-position: left;
   background-repeat: no-repeat;
   height: 120px;
   max-width: 1000px;
-  object-fit: cover   ;
+  object-fit: cover;
   overflow-x: hidden;
-  position:relative;
-  width:100%;
+  position: relative;
+  width: 100%;
 }
-.banner img{
+.banner img {
   animation: 5s ease-in-out infinite running banner-animation;
-  height:150px;
-  left:0px;
+  height: 150px;
+  left: 0px;
   overflow: hidden;
   object-fit: cover;
-  position:relative;
-  width:110%;
+  position: relative;
+  width: 110%;
 }
 
 h1 {
   align-items: center;
   background-color: rgb(245, 188, 239);
-  color:blueviolet;
-  display:flex;
+  color: blueviolet;
+  display: flex;
   font-size: 2.8rem;
-  height:80px;
+  height: 80px;
   justify-content: center;
-  position:sticky;
+  position: sticky;
   vertical-align: center;
-  top:0;
+  top: 0;
 }
-.menu{
+.menu {
   flex-wrap: nowrap;
-  display:flex;
+  display: flex;
+  justify-content: flex-start;
   flex-direction: row;
   overflow-x: scroll;
-  position:sticky;
-  position: -webkit-sticky; 
-  top:0;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
 }
-.menu-item{
+.menu-item {
   background-size: cover;
-  display:flex;
+  display: flex;
   flex-direction: column;
-  width:180px;
+  width: 180px;
   align-items: center;
   justify-content: center;
 }
-.menu-item img{
-  position:relative;
-  display:block;
-  height:100%;
+.menu-item a{
+  text-decoration: none;
+  text-align: center;
+  color:black;
+}
+.menu-item a img {
+  position: relative;
+  display: block;
+  height: 100%;
   cursor: pointer;
 }
 
-.anterior, .proximo {
-  width:40px;
-  opacity:.55;
+.anterior,
+.proximo {
+  width: 40px;
+  opacity: 0.55;
   position: absolute;
-  top:287px;
+  top: 287px;
   animation: 15s ease-in infinite both running pisca;
   z-index: 100;
 }
-.proximo{
-  right:5px;
-
+.proximo {
+  right: 5px;
 }
-@keyframes banner-animation{
-  0%{
+@keyframes banner-animation {
+  0% {
     left: 0px;
   }
-  50%{
+  50% {
     left: -10px;
   }
-  100%{
+  100% {
     left: 0;
   }
 }
 @keyframes pisca {
-  0%{
+  0% {
     opacity: 0;
   }
-  30%{
-    opacity: .55;
+  30% {
+    opacity: 0.55;
   }
-  50%{
+  50% {
     opacity: 0;
   }
-  70%{
-    opacity:.55;
+  70% {
+    opacity: 0.55;
   }
-  90%{
-    opacity:0;
+  90% {
+    opacity: 0;
   }
 }
-@media (max-width: 500px){
-  h1{
+@media (max-width: 500px) {
+  h1 {
     font-size: 1.8rem;
     align-items: center;
     justify-content: center;
-    height:80px;
+    height: 80px;
   }
 }
-.menu-item img{
+.menu-item a img {
   width: 140px;
+  height: 140px;
 }
 
 .div-container {
-  width:100%;
-  margin: 2rem 0;
-  max-width: 1000px;
-  height:100%;
+  width: 100%;
+  margin: 2rem auto;
+  max-width: 1300px;
+  height: 100%;
   min-height: 400px;
   border: 1px solid gray;
   border-radius: 4px;
   box-shadow: 3px 3px 5px rgba(141, 33, 33, 0.272);
   /* background-color: aqua; */
 }
-.container-title{
+.container-title {
   padding: 5px 25px;
   background-color: rgb(245, 188, 239);
-  color:blueviolet;
+  color: blueviolet;
   font-size: 1.6rem;
 }
-.container-img{
+.container-img {
+  border-radius: 3px;
   width: 50%;
   height: 150px;
   cursor: pointer;
   object-fit: cover;
   transition: all 300ms ease-in-out;
 }
-.container-img:hover{
+.container-img:hover {
   transform: scale(1.08);
   box-shadow: 2px 2px 15px silver;
 }
-.btn-voltar{
+.btn-voltar {
   cursor: pointer;
   display: block;
   position: relative;
   text-align: center;
-  padding:10px 15px;
+  padding: 10px 15px;
+}
+
+@media (min-width: 700px) {
+  .banner {
+    height: 200px;
+  }
+  .banner img {
+    height: 220px;
+  }
+  .menu {
+    padding: 2rem 0;
+  }
+  .menu-item {
+    width: 240px;
+  }
+  .anterior,
+  .proximo {
+    top: 430px;
+  }
+}
+@media (min-width: 1000px) {
+  .menu {
+    padding: 2rem 0;
+    justify-content: center;
+  }
+  .container-img {
+    width: 25%;
+    height: 220px;
+  }
+  .menu-item img {
+    width: 220px;
+  }
 }
