--- a/estilo.css
+++ b/estilo.css
@@ -9,7 +9,24 @@ html,
 body {
   overflow-x: hidden;
 }
-
+.title {
+  background-color: rgb(245, 188, 239);
+  color: blueviolet;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+.title h1 {
+  font-size: 2.8rem;
+  justify-content: center;
+  position: sticky;
+  margin: 1rem 0 0 0;
+  vertical-align: center;
+  top: 0;
+}
+.title h3{
+  padding: 0 0 1rem;
+}
 .banner {
   background-size: cover;
   background-position: left;
@@ -31,18 +48,6 @@ body {
   width: 110%;
 }
 
-h1 {
-  align-items: center;
-  background-color: rgb(245, 188, 239);
-  color: blueviolet;
-  display: flex;
-  font-size: 2.8rem;
-  height: 80px;
-  justify-content: center;
-  position: sticky;
-  vertical-align: center;
-  top: 0;
-}
 .menu {
   flex-wrap: nowrap;
   display: flex;
@@ -73,6 +78,10 @@ h1 {
   cursor: pointer;
 }
 
+.menu-item a img:hover {
+  transition: transform ease 400ms;
+  transform: scale(1.03);
+}
 .anterior,
 .proximo {
   width: 40px;
@@ -118,48 +127,48 @@ h1 {
   height: 140px;
 }
 /*------------------------ modal-close modal-p modal-img modal */
-#modal{
+#modal {
   background-color: rgba(0, 0, 0, 0.673);
   width: 100vw;
   height: 100vh;
-  position:fixed;
-  display:flex;
+  position: fixed;
+  display: flex;
   top: 0;
   left: 0;
   z-index: -10;
-  opacity:0;
+  opacity: 0;
   justify-content: center;
   align-items: center;
-  transition:all ease 500ms;
+  transition: all ease 500ms;
 }
-#modal-img{
-  display:flex;
+#modal-img {
+  display: flex;
   align-self: center;
   justify-self: center;
   width: 95%;
-  left:1%;
+  left: 1%;
   /* top: 10%; */
-  position:absolute;
+  position: absolute;
 }
-#modal-p{
+#modal-p {
   position: fixed;
-  display:flex;
-  width:90%;
+  display: flex;
+  width: 90%;
   bottom: 20px;
   left: 20px;
   color: aliceblue;
   font-size: 5vh;
   text-shadow: 1px 2px 3px rgb(65, 64, 64);
 }
-#modal-close{
+#modal-close {
   position: fixed;
   font-size: 50px;
   /* font-weight: bold; */
-  display:flex;
-  cursor:pointer;
-  padding:0 15px;
-  right:15px;
-  top:15px;
+  display: flex;
+  cursor: pointer;
+  padding: 0 15px;
+  right: 15px;
+  top: 15px;
   border-radius: 50%;
   justify-content: center;
   align-items: center;
@@ -168,17 +177,17 @@ h1 {
 }
 
 /*---------------------------------------------------- containers */
-.master-container{
+.master-container {
   margin: 2rem auto 0;
-  display:flex;
-  position:relative;
+  display: flex;
+  position: relative;
   flex-direction: column;
 }
 .div-container {
-  display:flex;
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin:0 auto;
+  margin: 0 auto;
   width: 100%;
   max-width: 1300px;
   height: 100%;
@@ -195,8 +204,8 @@ h1 {
   font-size: 1.6rem;
 }
 .container-div {
-  display:flex;
-  position:relative;
+  display: flex;
+  position: relative;
   border-radius: 3px;
   width: 50%;
   height: 150px;
@@ -216,19 +225,19 @@ h1 {
   background-color: rgba(240, 248, 255, 0.4);
   color: black;
   position: absolute;
-  bottom:-30px;
+  bottom: -30px;
   display: flex;
   width: 100%;
   font-size: 1.4rem;
   justify-content: center;
-  transition: ease 300ms ;
+  transition: ease 300ms;
 }
 .container-img:hover {
   transform: scale(1.08);
   box-shadow: 2px 2px 15px silver;
-} 
+}
 .btn-voltar {
-  color:black;
+  color: black;
   text-decoration: none;
   cursor: pointer;
   display: block;
@@ -236,16 +245,15 @@ h1 {
   text-align: center;
   padding: 10px 15px;
 }
-.btn-voltar:visited{
+.btn-voltar:visited {
   color: black;
 }
 
 @media (max-width: 500px) {
-  h1 {
+  .title h1 {
     font-size: 1.8rem;
     align-items: center;
     justify-content: center;
-    height: 80px;
   }
 }
 @media (min-width: 500px) {
@@ -253,7 +261,6 @@ h1 {
     width: 33%;
     height: 220px;
   }
-  
 }
 
 @media (min-width: 700px) {
