--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,7 @@
+:root {
+  --frontColor: rgb(81, 78, 78);
+  --backColor: rgb(247, 203, 180);
+}
 * {
   box-sizing: border-box;
   font-family: "Acme", sans-serif;
@@ -10,8 +14,12 @@ body {
   overflow-x: hidden;
 }
 .title {
-  background-color: rgb(245, 188, 239);
-  color: blueviolet;
+  background-image: linear-gradient(rgb(243, 190, 161), rgba(245, 245, 237, 0.5)), url("./img/pulseiras.jpeg");
+  background-color: rgb(247, 203, 180);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: overlay;
+  color: rgb(81, 78, 78);
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -31,7 +39,7 @@ body {
   background-size: cover;
   background-position: left;
   background-repeat: no-repeat;
-  height: 120px;
+  height: 200px;
   max-width: 1000px;
   object-fit: cover;
   overflow-x: hidden;
@@ -40,7 +48,7 @@ body {
 }
 .banner img {
   animation: 5s ease-in-out infinite running banner-animation;
-  height: 150px;
+  height: 200px;
   left: 0px;
   overflow: hidden;
   object-fit: cover;
@@ -94,6 +102,10 @@ body {
 .proximo {
   right: 5px;
 }
+.menu-item a img {
+  width: 140px;
+  height: 140px;
+}
 @keyframes banner-animation {
   0% {
     left: 0px;
@@ -122,10 +134,6 @@ body {
     opacity: 0;
   }
 }
-.menu-item a img {
-  width: 140px;
-  height: 140px;
-}
 /*------------------------ modal-close modal-p modal-img modal */
 #modal {
   background-color: rgba(0, 0, 0, 0.673);
@@ -149,6 +157,7 @@ body {
   left: 1%;
   /* top: 10%; */
   position: absolute;
+  transition: ease all 500ms;
 }
 #modal-p {
   position: fixed;
@@ -191,7 +200,7 @@ body {
   width: 100%;
   max-width: 1300px;
   height: 100%;
-  min-height: 400px;
+  min-height: 200px;
   border: 1px solid gray;
   border-radius: 4px;
   box-shadow: 3px 3px 5px rgba(141, 33, 33, 0.272);
@@ -199,8 +208,8 @@ body {
 }
 .container-title {
   padding: 5px 25px;
-  background-color: rgb(245, 188, 239);
-  color: blueviolet;
+  background-color: var(--backColor);
+  color: var(--frontColor);
   font-size: 1.6rem;
 }
 .container-div {
@@ -208,7 +217,7 @@ body {
   position: relative;
   border-radius: 3px;
   width: 50%;
-  height: 150px;
+  height: auto;
   cursor: pointer;
   overflow: hidden;
   transition: all 300ms ease-in-out;
@@ -248,6 +257,25 @@ body {
 .btn-voltar:visited {
   color: black;
 }
+.rodape{
+  background-color: var(--backColor);
+  color: var(--frontColor);
+  padding: 20px 15px;
+  line-height: 1.5rem;
+  font-size: .8rem;
+}
+.rodape .whats-div {
+  width:225px;
+  gap: 5px;
+  align-items: center;
+  display:flex;
+}
+.rodape #whats-icon{
+  width:25px;
+}
+.rodape #whats-number{
+  flex-direction: row;
+}
 
 @media (max-width: 500px) {
   .title h1 {
@@ -255,15 +283,21 @@ body {
     align-items: center;
     justify-content: center;
   }
+  .anterior, .proximo{
+    top:350px;
+  }
 }
 @media (min-width: 500px) {
   .container-div {
     width: 33%;
-    height: 220px;
+    height: auto;
+  }
+  .anterior, .proximo{
+    top:370px;
   }
 }
 
-@media (min-width: 700px) {
+@media (min-width: 693px) {
   .banner {
     height: 200px;
   }
@@ -278,7 +312,8 @@ body {
   }
   .anterior,
   .proximo {
-    top: 430px;
+    display: none;
+    top: 377px;
   }
 }
 @media (min-width: 1000px) {
@@ -287,8 +322,8 @@ body {
     justify-content: center;
   }
   .container-div {
-    width: 25%;
-    height: 220px;
+    width: 20%;
+    height: auto;
   }
   .menu-item img {
     width: 220px;
@@ -296,7 +331,7 @@ body {
 }
 @media (min-width: 1200px) {
   .container-div {
-    width: 20%;
-    height: 220px;
+    width: 200px;
+    height: auto;
   }
 }
