--- a/estilo.css
+++ b/estilo.css
@@ -12,5 +12,6 @@
 html,
 body {
   overflow-x: hidden;
+  
+  background-blend-mode: overlay;
 }
-/*---------------------------------------------------- containers */
