--- a/rodape.css
+++ b/rodape.css
@@ -1,4 +1,7 @@
 .rodape{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
   padding: 20px 15px;
   line-height: 1.5rem;
   font-size: .8rem;
@@ -8,7 +11,6 @@
   background-blend-mode: lighten;
   color: rgb(81, 78, 78);
   align-items: center;
-
 }
 .rodape .whats-div {
   display:flex;
@@ -25,7 +27,34 @@
   color: rgb(53, 50, 50);
   flex-direction: row;
 }
+#left{
+  display:block;
+  position:relative;
+  width:50%;
+  height:100%;
+}
+#right{
+  display:block;
+  position:relative;
+  width:50%;
+  height:100%;
+  bottom:0px;
+}
 #urzzomidia-h3{
+  display:block;
+  position:relative;
   text-align: right;
   color:rgb(38, 37, 37);
+  height:100%;
+}
+@media (max-width:600px){
+  .rodape{
+    flex-direction: column;
+  }
+  #left, #right{
+    width:100%;
+  }
+  #urzzomidia-h3{
+    width:100%;
+  }
 }
